# Zebro-Search-and-Rescue

./: .gitignore  Dockerfile  README.md  simulate  toolchain-rpi.cmake
Simulation/: CMakeLists.txt  areaDrawer.html  areatest.argos  argos_file_template.txt  generated.argos  leaderelection.argos  my_defines.h  run_simulations  run_simulations_choose_basekeeper_chance  run_simulations_distance  run_simulations_donation_rate  run_simulations_dying_nodes  run_simulations_localisation_noise  run_simulations_probability  searchandrescue.argos  simulate  videosetup.argos  videosetup2.argos
Simulation/controllers/: CMakeLists.txt
Simulation/controllers/footbot_zebrolike/: CMakeLists.txt  ZebroTopLevelController.cpp  ZebroTopLevelController.h  fail.cpp  fail.h  foot.txt  footbot_zebrolike.cpp  footbot_zebrolike.h  my_defines.h
Simulation/loop_functions/: CMakeLists.txt
Simulation/loop_functions/zone_loop_functions/: CMakeLists.txt  estimatedtrajectory_loop_functions.cpp  estimatedtrajectory_loop_functions.h  zone_qtuser_functions.cpp  zone_qtuser_functions.h
Zebro/: CMakeLists.txt  ZebroTopLevelController.cpp  ZebroTopLevelController.h  footbot_zebrolike.cpp  footbot_zebrolike.h  main.cpp  my_defines.h
Zebro/ProximitySensor/: ProximitySensor.cpp  ProximitySensor.h
Zebro/includes/: config.h
Zebro/includes/utility/: string_utilities.h
Zebro/includes/utility/datatypes/: byte_array.cpp  byte_array.h  datatypes.h
Zebro/includes/utility/math/: angles.cpp  angles.h  general.h  range.h  vector2.h  vector3.h
ZebroCode/: CMakeLists.txt  TestProgram.cpp
common-core/: 25_bots_prob.txt  SearchAndRescueBehaviour.cpp  SearchAndRescueBehaviour.h  ZebroIdentifier.cpp  ZebroIdentifier.h  constants.h
